--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.1.4",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/fire": "^7.6.1",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.1.4",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@hyvor/hyvor-talk-base": "^0.0.4",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "firebase": "^9.23.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
