--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,10 @@
     ],
     "useDefineForClassFields": false
   },
-  // "angularCompilerOptions": {
+  "angularCompilerOptions": {
   //   "enableI18nLegacyMessageIdFormat": false,
   //   "strictInjectionParameters": false,
   //   "strictInputAccessModifiers": true,
-  //   "strictTemplates": true
-  // }
+    // "strictTemplates": true
+  }
 }
