--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@hyvor/hyvor-talk-base": "^0.0.4",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@hyvor/hyvor-talk-base": "^0.0.4",
     "firebase": "^9.23.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "ngx-sharebuttons": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
