--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@hyvor/hyvor-talk-base": "^0.0.4",
+    "angular-calendar": "^0.31.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.23.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
