--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/fire": "~7.0.4",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.0.0",
+    "@angular/google-maps": "^17.1.2",
     "@angular/material": "^16.1.4",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
