--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buyzone-app",
+  "name": "medstream-web-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -36,6 +36,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "ngx-disqus": "^3.0.1",
+    "ngx-mat-select-search": "^7.0.5",
     "ngx-sharebuttons": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
