--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-disqus": "^3.0.1",
     "ngx-mat-select-search": "^7.0.5",
     "ngx-sharebuttons": "^13.0.0",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
