--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
+    "ng-lazyload-image": "^9.1.3",
     "ngx-disqus": "^3.0.1",
     "ngx-mat-select-search": "^7.0.5",
     "ngx-sharebuttons": "^13.0.0",
